analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/danglingAnnotationOnMemberFunction.kt
annotation class Ann

class C {
    @Ann(
    <caret>fun foo() {}
}